assignment_3/src/frontend/parser/generated/RamParser.java
/* RamParser.java */
/* Generated By:JavaCC: Do not edit this line. RamParser.java */
    package frontend.parser.generated;
    import java.io.FileNotFoundException;

    public class RamParser implements RamParserConstants {
        public static void main(String[] args)
        throws ParseException, TokenMgrError, FileNotFoundException
        {
            if (args.length == 0) {
                RamParser parser = new RamParser( System.in ) ;
                parser.Goal();
            } else {
                java.io.InputStream is = new java.io.FileInputStream(new java.io.File(args[0]));
                RamParser parser = new RamParser( is ) ;
                parser.Goal();
            }
        }

  final public void Goal() throws ParseException {
    trace_call("Goal");
    try {
      Program();
      jj_consume_token(0);
    } finally {
      trace_return("Goal");
    }
  }

  final public void RamToken() throws ParseException {
    trace_call("RamToken");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        jj_consume_token(CLASS);
        break;
        }
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
        break;
        }
      case LBRACE:{
        jj_consume_token(LBRACE);
        break;
        }
      case PUBLIC:{
        jj_consume_token(PUBLIC);
        break;
        }
      case STATIC:{
        jj_consume_token(STATIC);
        break;
        }
      case VOID:{
        jj_consume_token(VOID);
        break;
        }
      case MAIN:{
        jj_consume_token(MAIN);
        break;
        }
      case LPAREN:{
        jj_consume_token(LPAREN);
        break;
        }
      case STRING:{
        jj_consume_token(STRING);
        break;
        }
      case LSQPAREN:{
        jj_consume_token(LSQPAREN);
        break;
        }
      case RSQPAREN:{
        jj_consume_token(RSQPAREN);
        break;
        }
      case RPAREN:{
        jj_consume_token(RPAREN);
        break;
        }
      case RBRACE:{
        jj_consume_token(RBRACE);
        break;
        }
      case PLUSEQUALS:{
        jj_consume_token(PLUSEQUALS);
        break;
        }
      case MINUSEQUALS:{
        jj_consume_token(MINUSEQUALS);
        break;
        }
      case SEMICOLON:{
        jj_consume_token(SEMICOLON);
        break;
        }
      case RETURN:{
        jj_consume_token(RETURN);
        break;
        }
      case COMMA:{
        jj_consume_token(COMMA);
        break;
        }
      case INTEGER:{
        jj_consume_token(INTEGER);
        break;
        }
      case BOOLEAN:{
        jj_consume_token(BOOLEAN);
        break;
        }
      case ASSIGN:{
        jj_consume_token(ASSIGN);
        break;
        }
      case IF:{
        jj_consume_token(IF);
        break;
        }
      case ELSE:{
        jj_consume_token(ELSE);
        break;
        }
      case WHILE:{
        jj_consume_token(WHILE);
        break;
        }
      case COLON:{
        jj_consume_token(COLON);
        break;
        }
      case PRINT:{
        jj_consume_token(PRINT);
        break;
        }
      case PRINTLN:{
        jj_consume_token(PRINTLN);
        break;
        }
      case AND:{
        jj_consume_token(AND);
        break;
        }
      case OR:{
        jj_consume_token(OR);
        break;
        }
      case LESSTHAN:{
        jj_consume_token(LESSTHAN);
        break;
        }
      case EQUALITY:{
        jj_consume_token(EQUALITY);
        break;
        }
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      case TIMES:{
        jj_consume_token(TIMES);
        break;
        }
      case DOT:{
        jj_consume_token(DOT);
        break;
        }
      case LENGTH:{
        jj_consume_token(LENGTH);
        break;
        }
      case INTEGER_LITERAL:{
        jj_consume_token(INTEGER_LITERAL);
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
        break;
        }
      case FALSE:{
        jj_consume_token(FALSE);
        break;
        }
      case THIS:{
        jj_consume_token(THIS);
        break;
        }
      case NEW:{
        jj_consume_token(NEW);
        break;
        }
      case EXCLAMATION:{
        jj_consume_token(EXCLAMATION);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("RamToken");
    }
  }

  final public void Program() throws ParseException {
    trace_call("Program");
    try {
      MainClass();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CLASS:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        ClassDeclaration();
      }
    } finally {
      trace_return("Program");
    }
  }

  final public void MainClass() throws ParseException {
    trace_call("MainClass");
    try {
      jj_consume_token(CLASS);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LBRACE);
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(LPAREN);
      jj_consume_token(STRING);
      jj_consume_token(LSQPAREN);
      jj_consume_token(RSQPAREN);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      Statement();
      jj_consume_token(RBRACE);
      jj_consume_token(RBRACE);
    } finally {
      trace_return("MainClass");
    }
  }

  final public void ClassDeclaration() throws ParseException {
    trace_call("ClassDeclaration");
    try {
      jj_consume_token(CLASS);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(RBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        VariableDeclaration();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        MethodDeclaration();
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("ClassDeclaration");
    }
  }

  final public void VariableDeclaration() throws ParseException {
    trace_call("VariableDeclaration");
    try {
      Type();
      jj_consume_token(IDENTIFIER);
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("VariableDeclaration");
    }
  }

  final public void MethodDeclaration() throws ParseException {
    trace_call("MethodDeclaration");
    try {
      jj_consume_token(PUBLIC);
      Type();
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      FormalList();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      label_4:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_4;
        }
        VariableDeclaration();
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACE:
        case IF:
        case WHILE:
        case PRINT:
        case PRINTLN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_5;
        }
        Statement();
      }
      jj_consume_token(RETURN);
      Expression();
      jj_consume_token(SEMICOLON);
      jj_consume_token(RBRACE);
    } finally {
      trace_return("MethodDeclaration");
    }
  }

  final public void FormalList() throws ParseException {
    trace_call("FormalList");
    try {
      Type();
      jj_consume_token(IDENTIFIER);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_6;
        }
        FormalRest();
      }
    } finally {
      trace_return("FormalList");
    }
  }

  final public void FormalRest() throws ParseException {
    trace_call("FormalRest");
    try {
      jj_consume_token(COMMA);
      Type();
      jj_consume_token(IDENTIFIER);
    } finally {
      trace_return("FormalRest");
    }
  }

  final public void Type() throws ParseException {
    trace_call("Type");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:{
        jj_consume_token(INTEGER);
        TypePrime();
        break;
        }
      case BOOLEAN:{
        jj_consume_token(BOOLEAN);
        break;
        }
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Type");
    }
  }

  final public void TypePrime() throws ParseException {
    trace_call("TypePrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LSQPAREN:{
        jj_consume_token(LSQPAREN);
        jj_consume_token(RSQPAREN);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } finally {
      trace_return("TypePrime");
    }
  }

  final public void Statement() throws ParseException {
    trace_call("Statement");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:{
        jj_consume_token(LBRACE);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRACE:
          case IF:
          case WHILE:
          case PRINT:
          case PRINTLN:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[8] = jj_gen;
            break label_7;
          }
          Statement();
        }
        jj_consume_token(RBRACE);
        break;
        }
      case IF:{
        jj_consume_token(IF);
        jj_consume_token(LPAREN);
        Expression();
        jj_consume_token(RPAREN);
        Statement();
        jj_consume_token(ELSE);
        Statement();
        break;
        }
      case WHILE:{
        jj_consume_token(WHILE);
        jj_consume_token(LPAREN);
        Expression();
        jj_consume_token(RPAREN);
        Statement();
        break;
        }
      case PRINT:{
        jj_consume_token(PRINT);
        jj_consume_token(LPAREN);
        ExpressionList();
        jj_consume_token(RPAREN);
        jj_consume_token(SEMICOLON);
        break;
        }
      case PRINTLN:{
        jj_consume_token(PRINTLN);
        jj_consume_token(LPAREN);
        ExpressionList();
        jj_consume_token(RPAREN);
        jj_consume_token(SEMICOLON);
        break;
        }
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
        StatementPrime();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Statement");
    }
  }

  final public void StatementPrime() throws ParseException {
    trace_call("StatementPrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN:{
        jj_consume_token(ASSIGN);
        Expression();
        jj_consume_token(SEMICOLON);
        break;
        }
      case PLUSEQUALS:{
        jj_consume_token(PLUSEQUALS);
        Expression();
        jj_consume_token(SEMICOLON);
        break;
        }
      case LSQPAREN:{
        jj_consume_token(LSQPAREN);
        Expression();
        jj_consume_token(RSQPAREN);
        jj_consume_token(ASSIGN);
        Expression();
        jj_consume_token(SEMICOLON);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("StatementPrime");
    }
  }

  final public void Expression() throws ParseException {
    trace_call("Expression");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:{
        jj_consume_token(INTEGER_LITERAL);
        ExpressionPrime();
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
        ExpressionPrime();
        break;
        }
      case FALSE:{
        jj_consume_token(FALSE);
        ExpressionPrime();
        break;
        }
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
        ExpressionPrime();
        break;
        }
      case THIS:{
        jj_consume_token(THIS);
        ExpressionPrime();
        break;
        }
      case NEW:{
        jj_consume_token(NEW);
        ExpressionPrime();
        break;
        }
      case EXCLAMATION:{
        jj_consume_token(EXCLAMATION);
        ExpressionPrime();
        break;
        }
      case LPAREN:{
        jj_consume_token(LPAREN);
        Expression();
        jj_consume_token(RPAREN);
        ExpressionPrime();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Expression");
    }
  }

  final public void ExpressionPrime() throws ParseException {
    trace_call("ExpressionPrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LSQPAREN:
      case DOT:
      case LESSTHAN:
      case EQUALITY:
      case PLUS:
      case MINUS:
      case TIMES:
      case AND:
      case OR:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LESSTHAN:
        case EQUALITY:
        case PLUS:
        case MINUS:
        case TIMES:
        case AND:
        case OR:{
          Operator();
          Expression();
          break;
          }
        case LSQPAREN:{
          jj_consume_token(LSQPAREN);
          Expression();
          jj_consume_token(RSQPAREN);
          break;
          }
        case DOT:{
          jj_consume_token(DOT);
          ExpressionTriplePrime();
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        ;
      }
    } finally {
      trace_return("ExpressionPrime");
    }
  }

  final public void ExpressionDoublePrime() throws ParseException {
    trace_call("ExpressionDoublePrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:{
        jj_consume_token(INTEGER);
        jj_consume_token(LSQPAREN);
        Expression();
        jj_consume_token(RSQPAREN);
        break;
        }
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("ExpressionDoublePrime");
    }
  }

  final public void ExpressionTriplePrime() throws ParseException {
    trace_call("ExpressionTriplePrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LENGTH:{
        jj_consume_token(LENGTH);
        break;
        }
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
        jj_consume_token(LPAREN);
        ExpressionList();
        jj_consume_token(RPAREN);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("ExpressionTriplePrime");
    }
  }

  final public void ExpressionList() throws ParseException {
    trace_call("ExpressionList");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPAREN:
      case EXCLAMATION:
      case FALSE:
      case NEW:
      case THIS:
      case TRUE:
      case INTEGER_LITERAL:
      case IDENTIFIER:{
        Expression();
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[16] = jj_gen;
            break label_8;
          }
          ExpressionRest();
        }
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    } finally {
      trace_return("ExpressionList");
    }
  }

  final public void ExpressionRest() throws ParseException {
    trace_call("ExpressionRest");
    try {
      jj_consume_token(COMMA);
      Expression();
    } finally {
      trace_return("ExpressionRest");
    }
  }

  final public void Operator() throws ParseException {
    trace_call("Operator");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        jj_consume_token(AND);
        break;
        }
      case OR:{
        jj_consume_token(OR);
        break;
        }
      case LESSTHAN:{
        jj_consume_token(LESSTHAN);
        break;
        }
      case EQUALITY:{
        jj_consume_token(EQUALITY);
        break;
        }
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      case TIMES:{
        jj_consume_token(TIMES);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Operator");
    }
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_3_1()
 {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_9()
 {
    if (jj_3R_10()) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3R_11()
 {
    if (jj_scan_token(INTEGER)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_10()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_11()) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(50)) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_13()
 {
    if (jj_scan_token(LSQPAREN)) return true;
    return false;
  }

  private boolean jj_3R_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_13()) jj_scanpos = xsp;
    return false;
  }

  /** Generated Token Manager. */
  public RamParserTokenManager token_source;
  JavaCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[19];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xfffffe00,0x80000000,0x40000000,0x0,0x2000,0x10000,0x40000000,0x800,0x2000,0x2000,0x480800,0x20000200,0x1f340800,0x1f340800,0x0,0x0,0x10000,0x20000200,0x1f300000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x7ffff,0x0,0x40010,0x100,0x4c00c,0x0,0x40010,0x0,0x4c00c,0x4c00c,0x0,0x63082,0x0,0x0,0x40010,0x40020,0x0,0x63082,0x0,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[1];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public RamParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public RamParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new RamParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public RamParser(java.io.Reader stream) {
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new RamParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public RamParser(RamParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(RamParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      trace_token(token, "");
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
      trace_token(token, " (in getNextToken)");
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }
